compiler/tests/fail/typing/x86-64/global_in_global_def.jazz
u8 one = 1;
u16 two = one + one;
